[gd_scene load_steps=27 format=3 uid="uid://dcp0b8ip7e5na"]

[ext_resource type="Shader" path="res://Shaders/Blur.gdshader" id="1_nr6h7"]
[ext_resource type="Script" path="res://Scenes/UI/window_next_lvl.gd" id="1_qqqsl"]
[ext_resource type="Texture2D" uid="uid://chbaaeg6hn34o" path="res://Sprites/UI/Window.png" id="2_2e0i3"]
[ext_resource type="Texture2D" uid="uid://8oxeascoarrg" path="res://Sprites/UI/Buttons/Exit_button.png" id="4_tl5wj"]
[ext_resource type="Texture2D" uid="uid://cs4uqvk4piwc0" path="res://Sprites/UI/Buttons/Next_button.png" id="5_r24ye"]
[ext_resource type="Texture2D" uid="uid://cpgdp7fppao3o" path="res://Sprites/UI/Buttons/Exit_button_pressed.png" id="5_xsicl"]
[ext_resource type="Texture2D" uid="uid://bbsxur7y47kfg" path="res://Sprites/UI/Buttons/Next_button_pressed.png" id="6_db57a"]
[ext_resource type="Texture2D" uid="uid://btr2ufsp373ju" path="res://Sprites/UI/Effects/Light/Light_1.png" id="7_8kdan"]
[ext_resource type="Texture2D" uid="uid://cegno5xvayk1x" path="res://Sprites/UI/Effects/Light/Light_2.png" id="8_4i7kg"]
[ext_resource type="Texture2D" uid="uid://5ifgh0wggxql" path="res://Sprites/UI/Effects/Light/Light_3.png" id="9_o0r46"]
[ext_resource type="Texture2D" uid="uid://byewpn7e7t6tw" path="res://Sprites/UI/Rating/Rating_A.png" id="10_k8qkq"]
[ext_resource type="AudioStream" uid="uid://dgeugopjmdsd0" path="res://Sounds/Buttons/Button.mp3" id="12_p8p07"]
[ext_resource type="PackedScene" uid="uid://bvv23p02yuiif" path="res://Scenes/UI/Menu_Yes_No/menu_yes_no.tscn" id="13_7y73f"]
[ext_resource type="AudioStream" uid="uid://ofgf6pmwlsb2" path="res://Sounds/Rating/Sound_rating_A.mp3" id="14_li4it"]
[ext_resource type="AudioStream" uid="uid://da54mmdhmko42" path="res://Sounds/Rating/Sound_rating_B.mp3" id="15_gsc3l"]
[ext_resource type="AudioStream" uid="uid://co4xkomn6dpw8" path="res://Sounds/Rating/Sound_rating_C.mp3" id="16_uk0qa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jf31i"]
shader = ExtResource("1_nr6h7")
shader_parameter/lod = 1.2

[sub_resource type="Animation" id="Animation_lctji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light/Light_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Light/Light_2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Light/Light_3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q50wb"]
resource_name = "light_move"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light/Light_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.319), Color(1, 1, 1, 1), Color(1, 1, 1, 0.317647), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Light/Light_2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.93333, 2.96667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.317647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.317647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.317647)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Light/Light_3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.5, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.317647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.317647)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tfqg"]
_data = {
"RESET": SubResource("Animation_lctji"),
"light_move": SubResource("Animation_q50wb")
}

[sub_resource type="Animation" id="Animation_ny8c3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wyt0r"]
resource_name = "rotation"
length = 24.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36wj6"]
_data = {
"RESET": SubResource("Animation_ny8c3"),
"rotation": SubResource("Animation_wyt0r")
}

[sub_resource type="Animation" id="Animation_e061v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window_cat:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_u5h5u"]
resource_name = "Scale"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Window_cat:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.95, 0.95), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nme3e"]
_data = {
"RESET": SubResource("Animation_e061v"),
"Scale": SubResource("Animation_u5h5u")
}

[node name="Window_next_lvl" type="CanvasLayer" groups=["Window_next_lvl"]]
script = ExtResource("1_qqqsl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11, 0.067, 0.008, 0.45)

[node name="Blur" type="ColorRect" parent="ColorRect"]
material = SubResource("ShaderMaterial_jf31i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window_cat" type="Node2D" parent="ColorRect/Center"]

[node name="Window_next_lvl" type="CenterContainer" parent="ColorRect/Center/Window_cat"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.6
offset_top = -508.75
offset_right = 512.6
offset_bottom = 508.75
grow_horizontal = 2
grow_vertical = 2

[node name="Window" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl"]
custom_minimum_size = Vector2(922, 922)
layout_mode = 2

[node name="Window_Sprite" type="TextureRect" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window"]
layout_mode = 2
texture = ExtResource("2_2e0i3")
expand_mode = 1

[node name="VBox" type="VBoxContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window"]
layout_mode = 2

[node name="Margin_top" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox"]
custom_minimum_size = Vector2(922, 287)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top"]
layout_mode = 2

[node name="Margin_1" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Margin_left_button" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_left_button"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_left_button/VBox"]
custom_minimum_size = Vector2(153, 120)
layout_mode = 2

[node name="Button" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_left_button/VBox"]
custom_minimum_size = Vector2(153, 153)
layout_mode = 2

[node name="MM_Button" type="TextureButton" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_left_button/VBox/Button"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_tl5wj")
texture_pressed = ExtResource("5_xsicl")
texture_hover = ExtResource("5_xsicl")
ignore_texture_size = true
stretch_mode = 0

[node name="Margin_2" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Margin_3" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Margin_right_button" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_right_button"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_right_button/VBox"]
custom_minimum_size = Vector2(153, 120)
layout_mode = 2

[node name="Button" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_right_button/VBox"]
custom_minimum_size = Vector2(153, 153)
layout_mode = 2

[node name="Next_lvl_button" type="TextureButton" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_right_button/VBox/Button"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_r24ye")
texture_pressed = ExtResource("6_db57a")
texture_hover = ExtResource("6_db57a")
ignore_texture_size = true
stretch_mode = 0

[node name="Margin_4" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Margin_down" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox"]
custom_minimum_size = Vector2(307, 634)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down"]
layout_mode = 2

[node name="Center_margin" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox"]
custom_minimum_size = Vector2(0, 580)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin"]
layout_mode = 2

[node name="Margin_1" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox"]
custom_minimum_size = Vector2(221, 0)
layout_mode = 2

[node name="Center" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2

[node name="Light" type="Node2D" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center"]
position = Vector2(249.6, 316.75)

[node name="Light_1" type="TextureRect" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/Light"]
offset_left = -264.6
offset_top = -298.75
offset_right = 295.4
offset_bottom = 261.25
texture = ExtResource("7_8kdan")
expand_mode = 1

[node name="Light_2" type="TextureRect" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/Light"]
offset_left = -264.6
offset_top = -298.75
offset_right = 295.4
offset_bottom = 261.25
texture = ExtResource("8_4i7kg")
expand_mode = 1

[node name="Light_3" type="TextureRect" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/Light"]
offset_left = -264.6
offset_top = -298.75
offset_right = 295.4
offset_bottom = 261.25
texture = ExtResource("9_o0r46")
expand_mode = 1

[node name="Animation_light" type="AnimationPlayer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/Light"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6tfqg")
}

[node name="Animation_light_rotation" type="AnimationPlayer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/Light"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_36wj6")
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Margin" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/CenterContainer"]
custom_minimum_size = Vector2(280, 320)
layout_mode = 2

[node name="Rating" type="TextureRect" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox/Center/CenterContainer/Margin"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("10_k8qkq")
expand_mode = 1

[node name="Margin_2" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox/Center_margin/HBox"]
custom_minimum_size = Vector2(181, 0)
layout_mode = 2

[node name="Down_margin" type="MarginContainer" parent="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_down/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Animation_next_lvl" type="AnimationPlayer" parent="ColorRect/Center"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nme3e")
}

[node name="Audio_button" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("12_p8p07")
volume_db = -15.0
bus = &"Sounds"

[node name="Menu_Yes_No" parent="." instance=ExtResource("13_7y73f")]
unique_name_in_owner = true
visible = false

[node name="Sounds_rating" type="Node" parent="."]

[node name="Rating_A_sound" type="AudioStreamPlayer" parent="Sounds_rating"]
unique_name_in_owner = true
stream = ExtResource("14_li4it")
volume_db = -15.0
bus = &"Sounds"

[node name="Rating_B_sound" type="AudioStreamPlayer" parent="Sounds_rating"]
unique_name_in_owner = true
stream = ExtResource("15_gsc3l")
volume_db = -15.0
bus = &"Sounds"

[node name="Rating_C_sound" type="AudioStreamPlayer" parent="Sounds_rating"]
unique_name_in_owner = true
stream = ExtResource("16_uk0qa")
volume_db = -15.0
bus = &"Sounds"

[connection signal="pressed" from="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_left_button/VBox/Button/MM_Button" to="." method="_on_mm_button_pressed"]
[connection signal="pressed" from="ColorRect/Center/Window_cat/Window_next_lvl/Window/VBox/Margin_top/HBox/Margin_right_button/VBox/Button/Next_lvl_button" to="." method="_on_next_lvl_button_pressed"]
